--- a/AlarmClock_iOS22/Resources/Base.lproj/Main.storyboard
+++ b/AlarmClock_iOS22/Resources/Base.lproj/Main.storyboard
@@ -74,11 +74,18 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Soothing Alarms" id="Y1U-UQ-IdA">
                         <barButtonItem key="backBarButtonItem" title="Back" id="lLZ-Ej-O5S"/>
-                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="2Pd-Sf-TDt">
-                            <connections>
-                                <action selector="editButtonTapped:" destination="hYK-eF-Ymq" id="iyw-hi-jbl"/>
-                            </connections>
-                        </barButtonItem>
+                        <leftBarButtonItems>
+                            <barButtonItem systemItem="edit" id="2Pd-Sf-TDt">
+                                <connections>
+                                    <action selector="editButtonTapped:" destination="hYK-eF-Ymq" id="iyw-hi-jbl"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="stop" id="T7d-dO-FMg">
+                                <connections>
+                                    <action selector="deleteFirstRowButtonTapped:" destination="hYK-eF-Ymq" id="SGv-4x-yVg"/>
+                                </connections>
+                            </barButtonItem>
+                        </leftBarButtonItems>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="cme-4x-OPt">
                             <connections>
                                 <segue destination="8JI-0y-FTs" kind="show" id="55r-zf-KWk"/>
@@ -112,7 +119,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="p9H-3t-eAm">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="155"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="154.5"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="560730343.03529799">
                                                         <!--2018-10-08 22:25:43 +0000-->
                                                     </date>
@@ -207,7 +214,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bwa-qy-R3m" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="sPe-Zu-UMh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1184.8" y="196.55172413793105"/>
+            <point key="canvasLocation" x="1198" y="175"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LZ4-P8-rK8">
